--- a/SBRestDemo/src/main/resources/application.properties
+++ b/SBRestDemo/src/main/resources/application.properties
@@ -1,2 +1,23 @@
 
 logging.level.org.springframework: DEBUG
+
+spring.main.banner-mode=off
+#logging.level.org.springframework=ERROR
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://mysqldb:3306/demo
+spring.datasource.username=demo
+spring.datasource.password=demo
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+server.error.whitelabel.enabled=false
+
+server.port=8090
